# ninox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
ninox/: config.py  git_commands.py  image_description.py  main.py  s3_hugo.py
tests/: test_config.py  test_git_commands.py  test_main.py  test_s3_hugo.py
